--- a/uwp/uwp.vcxproj
+++ b/uwp/uwp.vcxproj
@@ -337,6 +337,21 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="C:\msys64\mingw64\bin\libgcc_s_seh-1.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="C:\msys64\mingw64\bin\libstdc++-6.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="C:\msys64\mingw64\bin\libwinpthread-1.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="$(ProjectDir)\..\x64\Release\libuwp\libuwp.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
